--- a/LAB5/styles.css
+++ b/LAB5/styles.css
@@ -1,9 +1,8 @@
 #game-container {
     position: relative;
-    width: 1500px; /* Змініть це на бажаний розмір контейнера */
-    height: 650px; /* Змініть це на бажаний розмір контейнера */
+    width: 1500px;
+    height: 650px; 
   }
-  
   #pixel {
     width: 50px;
     height: 50px;
