--- a/LAB8/styles.css
+++ b/LAB8/styles.css
@@ -149,6 +149,7 @@ a {
     .large-img {
       display: block;
       margin-top: 20px;
+      max-width: 80%;
 
     }
   }
@@ -161,6 +162,7 @@ a {
     .medium-img {
       display: block;
       margin-top: 20px;
+      max-width: 80%;
     }
   }
   
