--- a/LAB8/styles.css
+++ b/LAB8/styles.css
@@ -48,6 +48,11 @@ a {
 .nav-item {
     margin-left: 5rem;
 }
+.nav-icon {
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+  }
 
 .nav-logo {
     font-size: 2.1rem;
